--- a/cpu/Makefile
+++ b/cpu/Makefile
@@ -8,7 +8,7 @@ SRC = $(shell find ./src -type f -iname "*.c" -exec basename {} \;)
 OBJ = $(SRC:%.c=./obj/%.o) #De la variable SRC agarra todo lo que sea *.c  y lo pone en la carpeta obj/*.o
 SHARED = $(shell find ../shared/obj/*.o)
 
-LINK = -lpthread -lcommons -lm
+LINK = -lpthread -lcommons -lm -lreadline
 
 build: makefolder makeshared $(OBJ)
 	$(CC) -o $(MODULE).out $(MODULE).c $(OBJ) $(SHARED) $(LINK)
