--- a/memory/Makefile
+++ b/memory/Makefile
@@ -9,12 +9,22 @@ OBJ = $(SRC:%.c=./obj/%.o) #De la variable SRC agarra todo lo que sea *.c  y lo 
 SHARED = $(shell find ../shared/obj/*.o)
 
 LINK = -lpthread -lcommons -lm
+CFLAGS = -c
+BUILD_DEBUG_FLAG = 
+
 
 build: makefolder makeshared $(OBJ)
-	$(CC) -o $(MODULE).out $(MODULE).c $(OBJ) $(SHARED) $(LINK)
+	$(CC) $(BUILD_DEBUG_FLAG) -o $(MODULE).out $(MODULE).c $(OBJ) $(SHARED) $(LINK) 
+
+debug: CFLAGS := $(CFLAGS) -g
+debug: makeshared_debug build
+debug: BUILD_DEBUG_FLAG := -g
+
+./obj/%.o: ./src/%.c # REGLA # Este link no funca
+	$(CC) $(CFLAGS) -c $< -o $@ $(LINK) 
 
 
-CFLAGS = -c
+
 
 debug: CFLAGS := $(CFLAGS) -g
 debug: makeshared_debug build
