--- a/io/Makefile
+++ b/io/Makefile
@@ -9,15 +9,16 @@ OBJ = $(SRC:%.c=./obj/%.o) #De la variable SRC agarra todo lo que sea *.c  y lo 
 SHARED = $(shell find ../shared/obj/*.o)
 
 LINK = -lpthread -lcommons -lm
+CFLAGS = -c
+BUILD_DEBUG_FLAG = 
+
 
 build: makefolder makeshared $(OBJ)
-	$(CC) -o $(MODULE).out $(MODULE).c $(OBJ) $(SHARED) $(LINK)
-
-
-CFLAGS = -c
+	$(CC) $(BUILD_DEBUG_FLAG) -o $(MODULE).out $(MODULE).c $(OBJ) $(SHARED) $(LINK) 
 
 debug: CFLAGS := $(CFLAGS) -g
 debug: makeshared_debug build
+debug: BUILD_DEBUG_FLAG := -g
 
 ./obj/%.o: ./src/%.c # REGLA # Este link no funca
 	$(CC) $(CFLAGS) -c $< -o $@ $(LINK) 
