--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.ko
 *.obj
 *.elf
+*/obj/
 
 # Linker output
 *.ilk
@@ -52,3 +53,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Logs files
+*.log
