--- a/kernel/kernel.config
+++ b/kernel/kernel.config
@@ -1,4 +1,8 @@
-CLAVE=La clave del config
-IP=127.0.0.1
-PUERTO=4444
-VALOR=1
+IP_KERNEL=127.0.0.1
+PUERTO_KERNEL=4444
+
+IP_CPU=127.0.0.1
+PUERTO_CPU=4444
+
+IP_MEMORIA=127.0.0.1
+PUERTO_MEMORIA=4444
