Se agrega limpieza de memoria y se arregla config debug de IO

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,7 +44,7 @@
 			}
 		},
 		{
-			"label": "make_memory",
+			"label": "make_io",
 			"type": "shell",
 			"command": "make debug",
 			"args": [],
