Se agregan hilos y INICIAR_PROCESO

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
         "log.h": "c",
         "memory.h": "c",
         "io.h": "c",
-        "functional": "c"
+        "functional": "c",
+        "comunicacion.h": "c",
+        "client.h": "c",
+        "config.h": "c"
     }
 }
