Refactor client.h listo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "system_error": "c",
         "paquete.h": "c",
         "stdio.h": "c",
-        "protocolo.h": "c"
+        "protocolo.h": "c",
+        "netdb.h": "c"
     }
 }
