Refactor de kernel. Se extrae config y conexiones a archivos de SRC

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,8 @@
         "algorithm": "c",
         "memory": "c",
         "initializer_list": "c",
-        "numeric": "c"
+        "numeric": "c",
+        "configuracion.h": "c",
+        "conexion.h": "c"
     }
 }
