--- a/kernel/kernel.config
+++ b/kernel/kernel.config
@@ -1,10 +1,15 @@
 IP_KERNEL=127.0.0.1
-PUERTO_KERNEL=4440
+PUERTO_ESCUCHA=4440
 
 IP_CPU=127.0.0.1
-PUERTO_CPU=4441
+PUERTO_CPU_DISPATCH=4441
+PUERTO_CPU_INTERRUPT=8007
 
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=4442
 
-GRADOMULTIPROGRAMACION=10
+ALGORITMO_PLANIFICACION=FIFO
+QUANTUM=2000
+RECURSOS=[RA,RB,RC]
+INSTANCIAS_RECURSOS=[1,2,1]
+GRADO_MULTIPROGRAMACION=10
