--- a/memory/memoria.config
+++ b/memory/memoria.config
@@ -4,6 +4,6 @@ PUERTO_ESCUCHA=4442
 TAM_MEMORIA=4096
 TAM_PAGINA=32
 
-PATH_INSTRUCCIONES=./script
+PATH_INSTRUCCIONES=script/
 
 RETARDO_RESPUESTA=1000
