Se agrega primer version planificador corto plazo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "ciclo.h": "c",
         "fetch.h": "c",
         "planificador_largo.h": "c",
-        "queue.h": "c"
+        "queue.h": "c",
+        "planificador_corto.h": "c"
     }
 }
