Refactor planificadores. Se crea colas_planificador.c con toda la logica de las colas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "fetch.h": "c",
         "planificador_largo.h": "c",
         "queue.h": "c",
-        "planificador_corto.h": "c"
+        "planificador_corto.h": "c",
+        "colas_planificador.h": "c"
     }
 }
