Se agregar comando PROCESO_ESTADO y cola de Bloqueados

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "planificador_largo.h": "c",
         "queue.h": "c",
         "planificador_corto.h": "c",
-        "colas_planificador.h": "c"
+        "colas_planificador.h": "c",
+        "random": "c"
     }
 }
