Se agrega envios bloqueo por io y enviar instruccion io

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "queue.h": "c",
         "planificador_corto.h": "c",
         "colas_planificador.h": "c",
-        "random": "c"
+        "random": "c",
+        "string.h": "c"
     }
 }
