Agrego 1° iteracion memoria

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,49 +1,53 @@
 {
-    "files.associations": {
-        "kernel.h": "c",
-        "stdlib.h": "c",
-        "logger.h": "c",
-        "server.h": "c",
-        "cpu.h": "c",
-        "log.h": "c",
-        "memory.h": "c",
-        "io.h": "c",
-        "functional": "c",
-        "comunicacion.h": "c",
-        "client.h": "c",
-        "config.h": "c",
-        "system_error": "c",
-        "paquete.h": "c",
-        "stdio.h": "c",
-        "protocolo.h": "c",
-        "netdb.h": "c",
-        "pcb.h": "c",
-        "socket.h": "c",
-        "array": "c",
-        "*.tcc": "c",
-        "deque": "c",
-        "string": "c",
-        "unordered_map": "c",
-        "vector": "c",
-        "iterator": "c",
-        "string_view": "c",
-        "algorithm": "c",
-        "memory": "c",
-        "initializer_list": "c",
-        "numeric": "c",
-        "configuracion.h": "c",
-        "conexion.h": "c",
-        "codigos_operacion.h": "c",
-        "semaphore.h": "c",
-        "execute.h": "c",
-        "ciclo.h": "c",
-        "fetch.h": "c",
-        "planificador_largo.h": "c",
-        "queue.h": "c",
-        "planificador_corto.h": "c",
-        "colas_planificador.h": "c",
-        "random": "c",
-        "string.h": "c",
-        "gestor_io.h": "c"
-    }
+  "files.associations": {
+    "kernel.h": "c",
+    "stdlib.h": "c",
+    "logger.h": "c",
+    "server.h": "c",
+    "cpu.h": "c",
+    "log.h": "c",
+    "memory.h": "c",
+    "io.h": "c",
+    "functional": "c",
+    "comunicacion.h": "c",
+    "client.h": "c",
+    "config.h": "c",
+    "system_error": "c",
+    "paquete.h": "c",
+    "stdio.h": "c",
+    "protocolo.h": "c",
+    "netdb.h": "c",
+    "pcb.h": "c",
+    "socket.h": "c",
+    "array": "c",
+    "*.tcc": "c",
+    "deque": "c",
+    "string": "c",
+    "unordered_map": "c",
+    "vector": "c",
+    "iterator": "c",
+    "string_view": "c",
+    "algorithm": "c",
+    "memory": "c",
+    "initializer_list": "c",
+    "numeric": "c",
+    "configuracion.h": "c",
+    "conexion.h": "c",
+    "codigos_operacion.h": "c",
+    "semaphore.h": "c",
+    "execute.h": "c",
+    "ciclo.h": "c",
+    "fetch.h": "c",
+    "planificador_largo.h": "c",
+    "queue.h": "c",
+    "planificador_corto.h": "c",
+    "colas_planificador.h": "c",
+    "random": "c",
+    "string.h": "c",
+    "gestor_io.h": "c",
+    "dictionary.h": "c",
+    "bitarray.h": "c",
+    "error.h": "c",
+    "txt.h": "c"
+  }
 }
