--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,8 @@
     "dictionary.h": "c",
     "bitarray.h": "c",
     "error.h": "c",
-    "txt.h": "c"
+    "txt.h": "c",
+    "io_stdin.h": "c",
+    "readline.h": "c"
   }
 }
