Filesystem. Work in progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
     "bitarray.h": "c",
     "error.h": "c",
     "txt.h": "c",
-    "temporal.h": "c"
+    "temporal.h": "c",
+    "io_dialfs.h": "c"
   }
 }
