--- a/kernel/kernel.config
+++ b/kernel/kernel.config
@@ -8,8 +8,8 @@ PUERTO_CPU_INTERRUPT=8007
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=4442
 
-ALGORITMO_PLANIFICACION=FIFO
-QUANTUM=2000
-RECURSOS=[RA,RB,RC]
-INSTANCIAS_RECURSOS=[1,2,1]
-GRADO_MULTIPROGRAMACION=4
+ALGORITMO_PLANIFICACION=RR
+QUANTUM=2750
+RECURSOS=[RECURSO]
+INSTANCIAS_RECURSOS=[1]
+GRADO_MULTIPROGRAMACION=10
