--- a/io/ESPERA.config
+++ b/io/ESPERA.config
@@ -1,10 +1,9 @@
+TIPO_INTERFAZ=GENERICA
+TIEMPO_UNIDAD_TRABAJO=500
 IP_KERNEL=127.0.0.1
 PUERTO_KERNEL=4440
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=4442
-
-TIPO_INTERFAZ=STDOUT
-TIEMPO_UNIDAD_TRABAJO=50
 PATH_BASE_DIALFS=/home/utnso/dialfs
 BLOCK_SIZE=64
 BLOCK_COUNT=1024
