Pruebas listas para ejecutar

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -5,5 +5,5 @@ PUERTO_ESCUCHA_INTERRUPT=8007
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=4442
 
-CANTIDAD_ENTRADAS_TLB=16
-ALGORITMO_TLB=LRU
+CANTIDAD_ENTRADAS_TLB=32
+ALGORITMO_TLB=FIFO
