--- a/kernel/kernel.config
+++ b/kernel/kernel.config
@@ -8,8 +8,8 @@ PUERTO_CPU_INTERRUPT=8007
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=4442
 
-ALGORITMO_PLANIFICACION=VRR
-QUANTUM=500
-RECURSOS=[RA, RB, RC, RD]
-INSTANCIAS_RECURSOS=[1,1,1,1]
-GRADO_MULTIPROGRAMACION=3
+ALGORITMO_PLANIFICACION=FIFO
+QUANTUM=2750
+RECURSOS=[RECURSO]
+INSTANCIAS_RECURSOS=[1]
+GRADO_MULTIPROGRAMACION=10
